--- a/backend/package.json
+++ b/backend/package.json
@@ -2,13 +2,14 @@
   "name": "skillmatch-api",
   "version": "1.0.0",
   "description": "AI-powered skill matching platform backend",
-  "main": "dist/server.js",
+  "main": "src/server.ts",
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
   },
   "scripts": {
     "build": "tsc",
-    "start": "node dist/server.js",
+    "start": "ts-node src/server.ts",
+    "start:prod": "node dist/server.js",
     "dev": "nodemon --exec ts-node src/server.ts",
     "test": "jest",
     "lint": "eslint . --ext .ts",
@@ -28,6 +29,8 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3",
     "winston": "^3.11.0"
   },
   "devDependencies": {
@@ -39,17 +42,13 @@
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.10.8",
-    "@types/swagger-jsdoc": "^6.0.4",
-    "@types/swagger-ui-express": "^4.1.6",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@typescript-eslint/parser": "^6.18.1",
     "eslint": "^8.56.0",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "prisma": "^5.6.0",
-    "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "ts-jest": "^29.1.1"
   },
   "engines": {
     "node": ">=18.0.0"
